--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
+
 {
   "name": "avinav",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A secure user authentication system using Express.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Avinav",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.10",
